fix z-index issue on /blog...add profile page using ant...add seperate navbar for profile page

--- a/src/components/profile/profile-page.scss
+++ b/src/components/profile/profile-page.scss
@@ -6,3 +6,8 @@
 //   top: 100px;
 //   right: 0;
 // }
+
+.profile-page {
+  height: 100vh;
+  overflow: hidden;
+}
